Add ACCS NWI Southcentral to project list

--- a/03_data_insert/List_Included_Projects.json
+++ b/03_data_insert/List_Included_Projects.json
@@ -46,6 +46,7 @@
     "49_accs_shemya_2022",
     "50_harvard_alder_2023",
     "51_yukon_biophysical_2015",
-    "53_fws_tetlin_2024"
+    "53_fws_tetlin_2024",
+    "54_accs_nwisouthcentral_2024"
   ]
 }
